--- a/scene/one/elephant-conservation-africa/index.html
+++ b/scene/one/elephant-conservation-africa/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src inc.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src via.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -17,7 +17,7 @@
     html { background-color: #222; }
   </style>
 
-  <link rel="preconnect" href="https://inc.animathabitat.org" />
+  <link rel="preconnect" href="https://via.animathabitat.org" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
@@ -48,7 +48,7 @@
         <p class="linebreak"><i>Looking at Satao from a distance&mdash;from Canada, North America, it is unfair to place a value on such a loss for Kenya, and on such widespread biodiversity loss across Africa, without also addressing the impact of pollutants emitted and resources wasted by the rest of the world. This article points to Satao, as an ambassador for the crisis facing elephant conservation in Africa, and also to the ways the world can help create change from home.</i></p>
       </div>
 
-      <img alt="" src="https://inc.animathabitat.org/img/01/photo/~mark-deeble/deeble.2014.satao.bull-drinking.png" />
+      <img alt="" src="https://via.animathabitat.org/img/01/photo/~mark-deeble/deeble.2014.satao.bull-drinking.png" />
       <p class="text-right gutter-side">Satao, &ldquo;Bull drinking.&rdquo; (2014) &copy; Mark Deeble [<a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wordpress/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">markdeeble.com</a>]</p>
 
       <div>
@@ -63,7 +63,7 @@
 
       </div>
 
-      <img alt="" src="https://inc.animathabitat.org/img/01/photo/~mark-deeble/deeble.2014.satao.dead-and-splayed.png" />
+      <img alt="" src="https://via.animathabitat.org/img/01/photo/~mark-deeble/deeble.2014.satao.dead-and-splayed.png" />
       <p class="text-right gutter-side">Satao, &ldquo;Dead and splayed.&rdquo; (2014) &copy; Mark Deeble [<a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wordpress/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">markdeeble.com</a>]</p>
 
       <div>
