--- a/scene/one/elephant-conservation-botswana/index.html
+++ b/scene/one/elephant-conservation-botswana/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src inc.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src via.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -17,7 +17,7 @@
     html { background-color: #222; }
   </style>
 
-  <link rel="preconnect" href="https://inc.animathabitat.org" />
+  <link rel="preconnect" href="https://via.animathabitat.org" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
@@ -38,7 +38,7 @@
 
   <section>
     <article>
-      <img alt="" src="https://inc.animathabitat.org/img/01/photo/~elephants-without-borders/ewb.ele-eyes.jpg" />
+      <img alt="" src="https://via.animathabitat.org/img/01/photo/~elephants-without-borders/ewb.ele-eyes.jpg" />
       <p class="text-right gutter-side">Elephant &copy; Elephants Without Borders [<a href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">elephantswithoutborders.org</a>]</p>
 
       <div>
@@ -85,7 +85,7 @@
       <br>
 
       <div class="clear">
-        <img alt="" src="https://inc.animathabitat.org/img/01/geo/kavango-zambezi.map.color.nm.png" />
+        <img alt="" src="https://via.animathabitat.org/img/01/geo/kavango-zambezi.map.color.nm.png" />
         <p class="text-right">Kavango-Zambezi [<a href="../../../url/-org/kavangozambezi/" rel="noopener" target="_blank" title="Kavango-Zambezi Transfrontier Conservation Area">kavangozambezi.org</a>, edited and recolored]</p>
 
       </div>
@@ -120,7 +120,7 @@
 
       </div>
 
-      <img alt="" src="https://inc.animathabitat.org/img/01/geo/kavango-zambezi.map.information.jpg" />
+      <img alt="" src="https://via.animathabitat.org/img/01/geo/kavango-zambezi.map.information.jpg" />
       <p class="text-right gutter-side">Kavango-Zambezi [<a href="../../../url/-org/kavangozambezi-about/" rel="noopener" target="_blank" title="Kavango-Zambezi Transfrontier Conservation Area / Tourism Without Borders">kavangozambezi.org</a>, recolored]</p>
 
       <div class="clear">
@@ -151,7 +151,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://inc.animathabitat.org/img/01/photo/~elephants-without-borders/ewb.okavango.jpg" />
+        <img alt="" src="https://via.animathabitat.org/img/01/photo/~elephants-without-borders/ewb.okavango.jpg" />
         <p class="text-right gutter-side">Okavango &copy; Elephants Without Borders [<a href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">elephantswithoutborders.org</a>]</p>
 
       </div>
@@ -214,7 +214,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://inc.animathabitat.org/img/01/photo/~elephants-without-borders/ewb.landscape.1024-357.jpg" />
+        <img alt="" src="https://via.animathabitat.org/img/01/photo/~elephants-without-borders/ewb.landscape.1024-357.jpg" />
         <p class="text-right gutter-side">Grey Frontiers &copy; Elephants Without Borders [<a href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">elephantswithoutborders.org</a>]</p>
 
       </div>
