--- a/scene/one/history-of-elephants-anatomy/index.html
+++ b/scene/one/history-of-elephants-anatomy/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src inc.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src via.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -17,7 +17,7 @@
     html { background-color: #222; }
   </style>
 
-  <link rel="preconnect" href="https://inc.animathabitat.org" />
+  <link rel="preconnect" href="https://via.animathabitat.org" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
@@ -54,7 +54,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://inc.animathabitat.org/img/01/photo/museum-of-natural-history.marseille.elephant-skeleton.recolored.jpg" />
+        <img alt="" src="https://via.animathabitat.org/img/01/photo/museum-of-natural-history.marseille.elephant-skeleton.recolored.jpg" />
         <p class="text-right gutter-side">Elephant skeleton &copy; Museum of Natural History, Marseille [recolored]</p>
 
       </div>
@@ -145,7 +145,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://inc.animathabitat.org/img/01/photo/~steve-bloom/bloom.savuti.botswana.003321-SB1.jpg" />
+        <img alt="" src="https://via.animathabitat.org/img/01/photo/~steve-bloom/bloom.savuti.botswana.003321-SB1.jpg" />
         <p class="text-right gutter-side">Close-up-of elephants feet disturbing Cape Turtle Doves &copy; Steve Bloom [<a href="../../../url/-com/stevebloomphoto-elephants/" target="_blank" title="Steve Bloom / Photography / Elephants">stevebloomphoto.com</a>]</p>
 
       </div>
@@ -170,7 +170,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://inc.animathabitat.org/img/01/photo/~sheldrick-wildlife-trust/swt.tsavo-02.jpg" />
+        <img alt="" src="https://via.animathabitat.org/img/01/photo/~sheldrick-wildlife-trust/swt.tsavo-02.jpg" />
         <p class="text-right gutter-side">Daphne Sheldrick, Tsavo &copy; SWT [<a href="../../../url/-org/sheldrickwildlifetrust/" target="_blank" title="Sheldrick Wildlife Trust">sheldrickwildlifetrust.org</a>]</p>
 
       </div>
@@ -197,7 +197,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://inc.animathabitat.org/img/01/photo/~steve-bloom/bloom.savuti.botswana.002577-SB1.jpg" />
+        <img alt="" src="https://via.animathabitat.org/img/01/photo/~steve-bloom/bloom.savuti.botswana.002577-SB1.jpg" />
         <p class="text-right gutter-side">Charging bull elephant, Savuti, Botswana &copy; Steve Bloom [<a href="../../../url/-com/stevebloomphoto-elephants/" target="_blank" title="Steve Bloom / Photography / Elephants">stevebloomphoto.com</a>]</p>
 
       </div>
