--- a/scene/one/reference-art-2/index.html
+++ b/scene/one/reference-art-2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src inc.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src via.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -17,7 +17,7 @@
     html { background-color: #222; }
   </style>
 
-  <link rel="preconnect" href="https://inc.animathabitat.org" />
+  <link rel="preconnect" href="https://via.animathabitat.org" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
@@ -55,7 +55,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://inc.animathabitat.org/img/01/art/oatley.artcast.jpg" />
+        <img alt="" src="https://via.animathabitat.org/img/01/art/oatley.artcast.jpg" />
         <p class="text-right gutter-side"><i>Artcast</i> (2008) &copy; Visual Voice [<a href="../../../url/www/chrisoatley-podcasts/" rel="noopener" target="_blank" title="Chris Oatley / Artcast">chrisoatley.com</a>]</p>
       </div>
 
@@ -83,7 +83,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://inc.animathabitat.org/img/01/art/woodward.bottom-of-the-ninth.png" /></a>
+        <img alt="" src="https://via.animathabitat.org/img/01/art/woodward.bottom-of-the-ninth.png" /></a>
         <p class="text-right gutter-side"><i>Bottom of the Ninth</i> (2012) &copy; Ryan Woodward [<a title="Ryan Woodward / Bottom of the Ninth" href="../../../url/www/ryanwoodwardart-bottom-of-the-ninth/" target="_blank" rel="noopener">ryanwoodwardart.com</a>]</p>
       </div>
 
@@ -94,7 +94,7 @@
 
       </div>
 
-      <img alt="" src="https://inc.animathabitat.org/img/01/art/~disney-animation/disney.the-lion-king.open.jpg" />
+      <img alt="" src="https://via.animathabitat.org/img/01/art/~disney-animation/disney.the-lion-king.open.jpg" />
       <p class="text-right gutter-side"><i>The Lion King</i> (1994) &copy; Disney</p>
 
       <div>
@@ -105,7 +105,7 @@
 
       <div class="quote clear-top clear-bottom">
         <div class="quote clear-top clear-bottom">
-            <img alt="" src="https://inc.animathabitat.org/img/01/art/disney.living-desert-vanishing-prairie.jpg" />
+            <img alt="" src="https://via.animathabitat.org/img/01/art/disney.living-desert-vanishing-prairie.jpg" />
             <p class="text-right"><i>The Living Desert, The Vanishing Prairie</i> (1971) &copy; Disney</p>
 
             <!-- [ca.movieposter.com/q/Living+Desert/Vanishing+Prairie_posters.html] -->
@@ -118,7 +118,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://inc.animathabitat.org/img/01/art/~heinrich-kley/kley.elephant-dance.jpg" />
+        <img alt="" src="https://via.animathabitat.org/img/01/art/~heinrich-kley/kley.elephant-dance.jpg" />
         <p class="text-right gutter-side"><i>The Drawings of Heinrich Kley</i> (1909, republished 1961), 52.</p>
 
       </div>
