--- a/scene/one/wildlife-documentary-2/index.html
+++ b/scene/one/wildlife-documentary-2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src inc.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src via.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -17,7 +17,7 @@
     html { background-color: #222; }
   </style>
 
-  <link rel="preconnect" href="https://inc.animathabitat.org" />
+  <link rel="preconnect" href="https://via.animathabitat.org" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
@@ -57,7 +57,7 @@
       </div>
 
       <div class="clear">
-        <img alt="The Elephant Queen key art (16 by 9)" src="https://inc.animathabitat.org/img/01/title/apple-tv.the-elephant-queen.key-art.16-9.jpg" />
+        <img alt="The Elephant Queen key art (16 by 9)" src="https://via.animathabitat.org/img/01/title/apple-tv.the-elephant-queen.key-art.16-9.jpg" />
         <p class="text-right gutter-side"><i>The Elephant Queen</i> (2018) &copy; Apple TV Plus [<a href="../../../url/-com/theelephantqueen/" title="The Elephant Queen" target="_blank" rel="noopener">theelephantqueen.com</a>]</p>
 
       </div>
@@ -120,7 +120,7 @@
       </div>
 
       <div class="clear">
-        <img alt="Into the Okavango title" src="https://inc.animathabitat.org/img/01/title/national-geographic.into-the-okavango.banner.jpg" />
+        <img alt="Into the Okavango title" src="https://via.animathabitat.org/img/01/title/national-geographic.into-the-okavango.banner.jpg" />
         <p class="text-right gutter-side"><i>Into the Okavango</i> (2018) &copy; National Geographic Documentary Films [<a href="../../../url/-com/nationalgeographic-into-the-okavango/" title="Into the Okavango (documentary film, 2018)" target="_blank" rel="noopener">films.nationalgeographic.com</a>]</p>
 
       </div>
