--- a/scene/one/wildlife-documentary-lens/index.html
+++ b/scene/one/wildlife-documentary-lens/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src inc.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src via.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -17,7 +17,7 @@
     html { background-color: #222; }
   </style>
 
-  <link rel="preconnect" href="https://inc.animathabitat.org" />
+  <link rel="preconnect" href="https://via.animathabitat.org" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
@@ -61,7 +61,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://inc.animathabitat.org/img/01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.4.deserts.p04h64ds.jpg" />
+        <img alt="" src="https://via.animathabitat.org/img/01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.4.deserts.p04h64ds.jpg" />
         <p class="text-right gutter-side">&lsquo;Namibia's arid gravel plains are so incredibly hot that rain often evaporates before it hits the ground.&rsquo; Namibia &ndash; <i>Planet Earth II</i> e/4: &lsquo;Deserts&rsquo; &copy; 2016 BBC Earth [<a href="../../../url/-co-uk/bbc-programmes-p02544td/" rel="noopener" target="_blank" title="BBC / Planet Earth II">bbc.co.uk</a>]</p>
 
       </div>
@@ -97,7 +97,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://inc.animathabitat.org/img/01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.2.mountains.p04fglxx.jpg" />
+        <img alt="" src="https://via.animathabitat.org/img/01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.2.mountains.p04fglxx.jpg" />
         <p class="text-right gutter-side">&lsquo;There may be as few as 3,500 snow leopards left in the wild.&rsquo; Hemis National Park, India &ndash; <i>Planet Earth II</i> e/2: &lsquo;Mountains&rsquo; &copy; 2016 BBC Earth [<a href="../../../url/-co-uk/bbc-programmes-p02544td/" rel="noopener" target="_blank" title="BBC / Planet Earth II">bbc.co.uk</a>]</p>
 
       </div>
@@ -191,7 +191,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://inc.animathabitat.org/img/01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.5.grasslands.p04jjbqm.jpg" />
+        <img alt="" src="https://via.animathabitat.org/img/01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.5.grasslands.p04jjbqm.jpg" />
         <p class="text-right gutter-side">&lsquo;An African bull elephant swishes his trunk at the carmine bee-eaters following him through the grassland.&rsquo; Botswana &ndash; <i>Planet Earth II</i> e/5: &lsquo;Grasslands&rsquo; &copy; 2016 BBC Earth [<a href="../../../url/-co-uk/bbc-programmes-p02544td/" rel="noopener" target="_blank" title="BBC / Planet Earth II">bbc.co.uk</a>]</p>
 
       </div>
@@ -207,7 +207,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://inc.animathabitat.org/img/01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.6.cities.p04k7z08.jpg" />
+        <img alt="" src="https://via.animathabitat.org/img/01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.6.cities.p04k7z08.jpg" />
         <p class="text-right gutter-side">&lsquo;Mark MacEwen filming the macaques.&rsquo; Jaipur, India &ndash; <i>Planet Earth II</i> e/6: &lsquo;Cities&rsquo; &copy; 2016 BBC Earth [<a href="../../../url/-co-uk/bbc-programmes-p02544td/" rel="noopener" target="_blank" title="BBC / Planet Earth II">bbc.co.uk</a>]</p>
 
       </div>
@@ -275,7 +275,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://inc.animathabitat.org/img/01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.1.islands.p04dg9p0.jpg" />
+        <img alt="" src="https://via.animathabitat.org/img/01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.1.islands.p04dg9p0.jpg" />
         <p class="text-right gutter-side">&lsquo;Marine iguanas basking in the sun.&rsquo; Fernandina Island, Galapagos &ndash; <i>Planet Earth II</i> e/1: &lsquo;Islands&rsquo; &copy; 2016 BBC Earth [<a href="../../../url/-co-uk/bbc-programmes-p02544td/" rel="noopener" target="_blank" title="BBC / Planet Earth II">bbc.co.uk</a>]</p>
 
       </div>
