--- a/scene/one/elephant-conservation-amboseli/index.html
+++ b/scene/one/elephant-conservation-amboseli/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; frame-src https://player.vimeo.com; img-src inc.animathabitat.org 'self'; script-src js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; frame-src https://player.vimeo.com; img-src via.animathabitat.org 'self'; script-src js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -17,7 +17,7 @@
     html { background-color: #222; }
   </style>
 
-  <link rel="preconnect" href="https://inc.animathabitat.org" />
+  <link rel="preconnect" href="https://via.animathabitat.org" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
@@ -38,7 +38,7 @@
 
   <section>
     <article>
-      <img alt="" src="https://inc.animathabitat.org/img/01/photo/~nick-brandt/brandt.2008.amboseli.elephants-walking-through-grass.219114.jpg" />
+      <img alt="" src="https://via.animathabitat.org/img/01/photo/~nick-brandt/brandt.2008.amboseli.elephants-walking-through-grass.219114.jpg" />
       <p class="text-right gutter-side">&ldquo;Elephants Walking Through Grass&rdquo; Amboseli, 2008 (Leading matriarch killed by poachers, 2009) &copy; Nick Brandt [<a href="../../../url/-com/nickbrandt/" target="_blank" title="Nick Brandt">nickbrandt.com</a>]</p>
 
       <div>
@@ -53,7 +53,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://inc.animathabitat.org/img/01/photo/~nick-brandt/brandt.2007.amboseli.elephant-drinking.219393.jpg" />
+        <img alt="" src="https://via.animathabitat.org/img/01/photo/~nick-brandt/brandt.2007.amboseli.elephant-drinking.219393.jpg" />
         <p class="text-right gutter-side">&ldquo;Elephant Drinking&rdquo; Amboseli, 2007 (Killed by poachers, 2009) &copy; Nick Brandt [<a href="../../../url/-com/nickbrandt/" target="_blank" title="Nick Brandt">nickbrandt.com</a>]</p>
 
       </div>
@@ -156,7 +156,7 @@
 
       </div>
 
-      <img alt="" src="https://inc.animathabitat.org/img/01/photo/~nick-brandt/brandt.2011.amboseli.line-of-rangers-with-tusks-of-killed-elephants.219252.jpg" />
+      <img alt="" src="https://via.animathabitat.org/img/01/photo/~nick-brandt/brandt.2011.amboseli.line-of-rangers-with-tusks-of-killed-elephants.219252.jpg" />
       <p class="text-right gutter-side">&ldquo;Line of Rangers with Tusks of Killed Elephants&rdquo; Amboseli, 2011 &copy; Nick Brandt [<a href="../../../url/-com/nickbrandt/" target="_blank" title="Nick Brandt">nickbrandt.com</a>]</p>
 
       <div>
