--- a/scene/one/elephant-conservation-nairobi/index.html
+++ b/scene/one/elephant-conservation-nairobi/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; frame-src www.youtube.com; img-src inc.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; frame-src www.youtube.com; img-src via.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -17,7 +17,7 @@
     html { background-color: #222; }
   </style>
 
-  <link rel="preconnect" href="https://inc.animathabitat.org" />
+  <link rel="preconnect" href="https://via.animathabitat.org" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
@@ -38,7 +38,7 @@
 
   <section>
     <article>
-      <img alt="" src="https://inc.animathabitat.org/img/01/photo/~sheldrick-wildlife-trust/swt.orphans-line.1.jpg" />
+      <img alt="" src="https://via.animathabitat.org/img/01/photo/~sheldrick-wildlife-trust/swt.orphans-line.1.jpg" />
       <p class="text-right gutter-side">&ldquo;Orphans line.&rdquo; Nairobi Nursery, 2019 &copy; SWT [<a href="../../../url/-org/sheldrickwildlifetrust/" target="_blank" title="Sheldrick Wildlife Trust">sheldrickwildlifetrust.org</a>, cropped]</p>
 
       <div>
@@ -61,7 +61,7 @@
 
       <div class="quote clear-top clear-bottom">
         <div class="quote clear-top clear-bottom">
-          <img alt="" src="https://inc.animathabitat.org/img/01/logo/swt.1977.png" />
+          <img alt="" src="https://via.animathabitat.org/img/01/logo/swt.1977.png" />
           <p class="text-right">Logo &copy; SWT [<a href="../../../url/-org/sheldrickwildlifetrust/" target="_blank" title="Sheldrick Wildlife Trust">sheldrickwildlifetrust.org</a>]</p>
         </div>
 
@@ -92,7 +92,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://inc.animathabitat.org/img/01/photo/~sheldrick-wildlife-trust/swt.2017.kiasa-with-two-big-bulls.jpg" class="matte">
+        <img alt="" src="https://via.animathabitat.org/img/01/photo/~sheldrick-wildlife-trust/swt.2017.kiasa-with-two-big-bulls.jpg" class="matte">
         <p class="gutter-side text-right">&ldquo;Kiasa with two bulls.&rdquo; Tsavo, 2017 &copy; SWT</p>
 
       </div>
@@ -110,12 +110,12 @@
 
         <div class="clear diptych">
           <div class="clear">
-            <img alt="" src="https://inc.animathabitat.org/img/01/photo/~sheldrick-wildlife-trust/swt.2017.51117.kiasa-getting-stronger.jpg" class="matte">
+            <img alt="" src="https://via.animathabitat.org/img/01/photo/~sheldrick-wildlife-trust/swt.2017.51117.kiasa-getting-stronger.jpg" class="matte">
             <p class="gutter-side text-right">&ldquo;Kiasa getting stronger.&rdquo; Nairobi Nursery, 2017 &copy; SWT</p>
           </div>
 
           <div class="clear">
-            <img alt="" src="https://inc.animathabitat.org/img/01/photo/~sheldrick-wildlife-trust/swt.2017.74653.kiasa-keeping-distance.jpg" class="matte">
+            <img alt="" src="https://via.animathabitat.org/img/01/photo/~sheldrick-wildlife-trust/swt.2017.74653.kiasa-keeping-distance.jpg" class="matte">
             <p class="gutter-side text-right">&ldquo;Kiasa keeping her distance.&rdquo; Nairobi Nursery, 2017 &copy; SWT</p>
           </div>
 
@@ -139,12 +139,12 @@
 
         <div class="clear diptych">
           <div class="clear">
-            <img alt="" src="https://inc.animathabitat.org/img/01/photo/~sheldrick-wildlife-trust/swt.2018.81541.kiasa-happy-settled-girl.jpg" class="matte">
+            <img alt="" src="https://via.animathabitat.org/img/01/photo/~sheldrick-wildlife-trust/swt.2018.81541.kiasa-happy-settled-girl.jpg" class="matte">
             <p class="gutter-side text-right">&ldquo;Happy settled girl.&rdquo; Nairobi Nursery, 2018 &copy; SWT</p>
           </div>
 
           <div class="clear">
-            <img alt="" src="https://inc.animathabitat.org/img/01/photo/~sheldrick-wildlife-trust/swt.2018.95826.kiasa-sucking-her-trunk.jpg" class="matte">
+            <img alt="" src="https://via.animathabitat.org/img/01/photo/~sheldrick-wildlife-trust/swt.2018.95826.kiasa-sucking-her-trunk.jpg" class="matte">
             <p class="gutter-side text-right">&ldquo;Kiasa sucking her trunk.&rdquo; Nairobi Nursery, 2018 &copy; SWT</p>
           </div>
 
@@ -360,7 +360,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://inc.animathabitat.org/img/01/photo/~sheldrick-wildlife-trust/swt.2017.kiasa.jpg" class="matte">
+        <img alt="" src="https://via.animathabitat.org/img/01/photo/~sheldrick-wildlife-trust/swt.2017.kiasa.jpg" class="matte">
         <p class="gutter-side text-right">&ldquo;Kiasa.&rdquo; Nairobi Nursery, 2017 &copy; SWT</p>
 
       </div>
@@ -374,12 +374,12 @@
 
       <div class="clear diptych">
         <div class="clear-bottom">
-          <img alt="" src="https://inc.animathabitat.org/img/01/art/~angela-sheldrick/water-colour.2018.10.jpg" class="matte-thin">
+          <img alt="" src="https://via.animathabitat.org/img/01/art/~angela-sheldrick/water-colour.2018.10.jpg" class="matte-thin">
           <p class="text-right">Angela Sheldrick Water Colour, October 2018 &copy; SWT [<a href="../../../url/-org/sheldrickwildlifetrust-water-colours/" target="_blank" title="Sheldrick Wildlife Trust / Water Colours">sheldrickwildlifetrust.org</a>]</p>
         </div>
 
         <div class="clear-bottom">
-          <img alt="" src="https://inc.animathabitat.org/img/01/art/~angela-sheldrick/water-colour.2018.11.jpg" class="matte-thin">
+          <img alt="" src="https://via.animathabitat.org/img/01/art/~angela-sheldrick/water-colour.2018.11.jpg" class="matte-thin">
           <p class="text-right">Angela Sheldrick Water Colour, November 2018 &copy; SWT [<a href="../../../url/-org/sheldrickwildlifetrust-water-colours/" target="_blank" title="Sheldrick Wildlife Trust / Water Colours">sheldrickwildlifetrust.org</a>]</p>
         </div>
 
