--- a/scene/one/wildlife-documentary/index.html
+++ b/scene/one/wildlife-documentary/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src inc.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src via.animathabitat.org 'self'; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -17,7 +17,7 @@
     html { background-color: #222; }
   </style>
 
-  <link rel="preconnect" href="https://inc.animathabitat.org" />
+  <link rel="preconnect" href="https://via.animathabitat.org" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
@@ -61,7 +61,7 @@
       </div>
 
       <div class="clear">
-        <img alt="VIRUNGA title" src="https://inc.animathabitat.org/img/01/title/virunga.ttl3.jpg" />
+        <img alt="VIRUNGA title" src="https://via.animathabitat.org/img/01/title/virunga.ttl3.jpg" />
         <p class="text-right gutter-side"><i>Virunga</i> title lettering &copy; Grain Media [<a href="../../../url/-org/virunga/" title="Virunga National Park" target="_blank" rel="noopener">virunga.org</a>]</p>
 
       </div>
@@ -135,7 +135,7 @@
       </div>
 
       <div class="clear">
-        <img alt="Before the Flood banner" src="https://inc.animathabitat.org/img/01/title/national-geographic.before-the-flood.banner.jpg" />
+        <img alt="Before the Flood banner" src="https://via.animathabitat.org/img/01/title/national-geographic.before-the-flood.banner.jpg" />
         <p class="text-right gutter-side"><i>Before the Flood</i> title image &copy; National Geographic Documentary Films [<a href="../../../url/-com/beforetheflood/" title="Before the Flood (documentary film, 2016)" target="_blank" rel="noopener">beforetheflood.com</a>]</p>
 
       </div>
@@ -214,7 +214,7 @@
       </div>
 
       <div class="clear">
-        <img alt="The Ivory Game lockup" src="https://inc.animathabitat.org/img/01/title/netflix.the-ivory-game.lockup.png" />
+        <img alt="The Ivory Game lockup" src="https://via.animathabitat.org/img/01/title/netflix.the-ivory-game.lockup.png" />
         <p class="text-right gutter-side"><i>The Ivory Game</i> lockup &copy; Vulcan Productions [<a href="../../../url/-com/theivorygame/" title="The Ivory Game (documentary film, 2016)" target="_blank" rel="noopener">theivorygame.com</a>]</p>
 
       </div>
