--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -297,37 +297,49 @@
       <p class="small">In Memoriam</p>
 
       <p class="linebreak small"><font class="title">Himba</font></p>
-      <p class="small"><font class="small"><i>Natural World: Elephant Nomads Of The Namib Desert</i> (BBC documentary, 2008)</font></p>
+      <p class="small"><font class="small">BBC <i>Natural World: Elephant Nomads Of The Namib Desert</i> (documentary, 2008) &ndash; Namib</font></p>
 
-      <p class="linebreak small"><font class="title">Igor &middot;&nbsp;Qumquat</font></p>
-      <p class="small"><font class="small">Nick Brandt <i>On This Earth, A Shadow Falls</i> (book series, 2005, 2009)</font></p>
+      <p class="linebreak small"><font class="title">Igor</font></p>
+      <p class="small"><font class="small">Amboseli (1960-2009)</font></p>
+
+      <p class="linebreak small"><font class="title">Qumquat</font></p>
+      <p class="small"><font class="small">Amboseli (1968-2012)</font></p>
 
       <p class="linebreak small"><font class="title">Satao</font></p>
-      <p class="small"><font class="small">Tsavo Trust &ndash;&nbsp;Tsavo (c.1968-2014)</font></p>
+      <p class="small"><font class="small">Tsavo (c.1968-2014)</font></p>
 
-      <p class="linebreak small"><font class="title">Kamboyo &middot;&nbsp;Masthuele &middot;&nbsp;Isilo</font></p>
-      <p class="small"><font class="small">James Currie <i>Last of the Big Tuskers</i> (documentary, 2018)</font></p>
+      <p class="linebreak small"><font class="title">Isilo</font></p>
+      <p class="small"><font class="small">Tembe (1958-2014)</font></p>
 
-      <p class="linebreak small"><font class="title">Mimi &middot;&nbsp;Athena</font></p>
-      <p class="small"><font class="small">Mark Deeble and Victoria Stone <i>The Elephant Queen</i> (Apple TV&plus; original, 2018)</font></p>
+      <p class="linebreak small"><font class="title">Masthuele</font></p>
+      <p class="small"><font class="small">Kruger (1969-2016)</font></p>
+
+      <p class="linebreak small"><font class="title">Kamboyo</font></p>
+      <p class="small"><font class="small">Tsavo (1962-2017)</font></p>
+
+      <p class="linebreak small"><font class="title">Mimi &middot; Athena</font></p>
+      <p class="small"><font class="small">Apple TV <i>The Elephant Queen</i> (documentary, 2018) &ndash; Tsavo</font></p>
 
       <p class="linebreak small"><font class="title">Tim</font></p>
-      <p class="small"><font class="small">Amboseli Trust for Elephants &ndash;&nbsp;Amboseli (c.1970-2020)</font></p>
+      <p class="small"><font class="small">Amboseli (c.1970-2020)</font></p>
 
       <p class="linebreak small"><font class="title">Gaia</font></p>
-      <p class="small"><font class="small">Elephants Without Borders &ndash;&nbsp;<i>Elephant</i> (Disney&plus; original, 2020)</font></p>
+      <p class="small"><font class="small">Disney Nature <i>Elephant</i> (documentary, 2020) &ndash; Elephants Without Borders &ndash; Zambezi</font></p>
 
       <p class="linebreak small"><font class="title">Luggard &middot;&nbsp;Maisha</font></p>
-      <p class="small"><font class="small">Sheldrick Wildlife Trust &ndash;&nbsp;Ithumba (c.2016-2021)</font></p>
+      <p class="small"><font class="small">Ithumba (c.2016-2021)</font></p>
 
       <p class="linebreak small"><font class="title">Tolstoy</font></p>
-      <p class="small"><font class="small">Amboseli Trust for Elephants &ndash;&nbsp;Amboseli (c.1971-2022)</font></p>
+      <p class="small"><font class="small">Amboseli (c.1971-2022)</font></p>
 
       <p class="linebreak small"><font class="title">Monsoon</font></p>
-      <p class="small"><font class="small">Save the Elephants &ndash;&nbsp;Samburu (c.1960-2022)</font></p>
+      <p class="small"><font class="small">Samburu (c.1960-2022)</font></p>
 
       <p class="linebreak small"><font class="title">Theodora</font></p>
-      <p class="small"><font class="small">Big Life Foundation &ndash;&nbsp;Kimana (c.1966-2023)</font></p>
+      <p class="small"><font class="small">Kimana (c.1966-2023)</font></p>
+
+      <p class="linebreak small"><font class="title">Gilgil</font></p>
+      <p class="small"><font class="small">Amboseli (c.1989-2024)</font></p>
 
     </div>
 
