--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -297,7 +297,7 @@
       <p class="small">In Memoriam</p>
 
       <p class="linebreak small"><font class="title">Himba</font></p>
-      <p class="small"><font class="small">BBC <i>Natural World: Elephant Nomads Of The Namib Desert</i> (documentary, 2008) &ndash; Namib</font></p>
+      <p class="small"><font class="small">Namib &ndash; BBC <i>Natural World: Elephant Nomads Of The Namib Desert</i> (documentary, 2008)</font></p>
 
       <p class="linebreak small"><font class="title">Igor</font></p>
       <p class="small"><font class="small">Amboseli (1960-2009)</font></p>
@@ -318,13 +318,13 @@
       <p class="small"><font class="small">Tsavo (1962-2017)</font></p>
 
       <p class="linebreak small"><font class="title">Mimi &middot; Athena</font></p>
-      <p class="small"><font class="small">Apple TV <i>The Elephant Queen</i> (documentary, 2018) &ndash; Tsavo</font></p>
+      <p class="small"><font class="small">Tsavo &ndash; Apple TV <i>The Elephant Queen</i> (documentary, 2018)</font></p>
 
       <p class="linebreak small"><font class="title">Tim</font></p>
       <p class="small"><font class="small">Amboseli (c.1970-2020)</font></p>
 
       <p class="linebreak small"><font class="title">Gaia</font></p>
-      <p class="small"><font class="small">Disney Nature <i>Elephant</i> (documentary, 2020) &ndash; Elephants Without Borders &ndash; Zambezi</font></p>
+      <p class="small"><font class="small">Zambezi &ndash; Disney Nature <i>Elephant</i> (documentary, 2020) &ndash; Elephants Without Borders</font></p>
 
       <p class="linebreak small"><font class="title">Luggard &middot;&nbsp;Maisha</font></p>
       <p class="small"><font class="small">Ithumba (c.2016-2021)</font></p>
