--- a/c/privacy-policy/index.html
+++ b/c/privacy-policy/index.html
@@ -71,7 +71,7 @@
         <p>Embedded content from other websites behaves in the exact same way as if the visitor has visited the other website. These websites may collect data about You, use cookies, embed additional third-party tracking, and monitor interaction with that embedded content, including tracking interaction with the embedded content if You have an account and are logged in to that website.</p>
 
         <h5 class="linebreak title" id="data"><b>4.4</b> Data</h5>
-        <p class="lineend">Animat Webitat does not submit data analytics to any third-party, and believes that your personal data belongs to You; You decide who to share it with, period.</p>
+        <p class="lineend">Animat Webitat does not submit data analytics to any third-party, and believes that your personal data belongs to You. You decide who to share it with. Period.</p>
 
         <pre class="thin"></pre>
 
