--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -324,22 +324,26 @@
       <p class="small"><font class="small">Amboseli (c.1970-2020)</font></p>
 
       <p class="linebreak small"><font class="title">Gaia</font></p>
-      <p class="small"><font class="small">Zambezi &ndash; Disney Nature <i>Elephant</i> (documentary, 2020) &ndash; Elephants Without Borders</font></p>
+      <p class="small"><font class="small">Zambezi &ndash; Disney Nature <i>Elephant: In the Footprints of Elephant</i> (documentary, 2020) &ndash; Elephants Without Borders</font></p>
 
       <p class="linebreak small"><font class="title">Luggard &middot;&nbsp;Maisha</font></p>
       <p class="small"><font class="small">Ithumba (c.2016-2021)</font></p>
 
       <p class="linebreak small"><font class="title">Tolstoy</font></p>
-      <p class="small"><font class="small">Amboseli (c.1971-2022)</font></p>
+      <p class="small"><font class="small">Amboseli (1971-2022)</font></p>
 
       <p class="linebreak small"><font class="title">Monsoon</font></p>
       <p class="small"><font class="small">Samburu (c.1960-2022)</font></p>
 
       <p class="linebreak small"><font class="title">Theodora</font></p>
-      <p class="small"><font class="small">Kimana (c.1966-2023)</font></p>
+      <p class="small"><font class="small">Kimana (c.1967-2023)</font></p>
+
+      <p class="linebreak small"><font class="title">Selengei</font></p>
+      <p class="small"><font class="small">Amboseli &ndash; National Geographic <i>Queens: Behind the Queens</i> (documentary, 2024) &ndash; Amboseli Trust for Elephants</font></p>
+      <!-- (1987-) -->
 
       <p class="linebreak small"><font class="title">Gilgil</font></p>
-      <p class="small"><font class="small">Amboseli (c.1989-2024)</font></p>
+      <p class="small"><font class="small">Enduimet (1987-2024)</font></p>
 
     </div>
 
