--- a/rss/index.html
+++ b/rss/index.html
@@ -2,7 +2,7 @@
 <html lang="en, fr">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src createsend.com s.animathabitat.org 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
   <meta name="google" content="notranslate" />
 
   <meta name="author" content="Dane Aleksander" />
@@ -89,7 +89,7 @@
   function load_createsend() {
 
     var script = document.createElement( "script" );
-    script.src = "https://js.createsend1.com/javascript/copypastesubscribeformlogic.js";
+    script.src = "https://s.animathabitat.org/inc/js/createsend-com/copypastesubscribeformlogic.js";
     script.type = "text/javascript";
 
     document.body.appendChild(script);
