--- a/app/index.html
+++ b/app/index.html
@@ -72,7 +72,7 @@
   // function load_createsend() {
   //
   //   var script = document.createElement( "script" );
-  //   script.src = "https://js.createsend1.com/javascript/copypastesubscribeformlogic.js";
+  //   script.src = "https://s.animathabitat.org/inc/js/createsend-com/copypastesubscribeformlogic.js";
   //   script.type = "text/javascript";
   //
   //   document.body.appendChild(script);
