--- a/rss/confirmation/index.html
+++ b/rss/confirmation/index.html
@@ -42,7 +42,7 @@
         <h3 class="letterhead">Thanks for your interest in scenes at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Merci pour votre int&eacute;r&ecirc;t pour les sc&egrave;nes chez Animat Habitat.</font></h3>
 
         <h5 class="linebreak">Please verify your address.<font class="fr">&nbsp;&#92;&nbsp;Veuillez v&eacute;rifier votre adresse.</font></h5>
-        <p>Use the verification link sent to your e-mail to confirm your registration.<font class="fr">&nbsp;&#92;&nbsp;Utilisez le lien de v&eacute;rification envoy&eacute; &agrave; votre adresse e-mail pour confirmer votre inscription.</font></p>
+        <p>Use the verification link in your e-mail inbox to confirm your registration.<font class="fr">&nbsp;&#92;&nbsp;Utilisez le lien de v&eacute;rification envoy&eacute; &agrave; votre adresse e-mail pour confirmer votre inscription.</font></p>
 
       </div>
 
