--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         <pre class="thin"></pre>
 
-        <p class="linebreak"><a href="patron/" title="Animat Habitat patrons.">Patron</a></p>
+        <p class="linebreak"><a href="patron/" title="Animat Habitat patrons.">Donation</a><font class="fr">&#92;&nbsp;Don</font></p>
         <p class="lineend small">Support independent art at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Soutenir art ind&eacute;pendant chez Animat Habitat.</font></p>
 
         <pre class="thin"></pre>
