--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <div class="quote ptych-right">
 
         <p><a href="canon/" title="Animat Habitat boutique.">Boutique</a></p>
-        <p class="lineend small">Gift shop at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Boutique d'art chez Animat Habitat.</font></p>
+        <p class="lineend small">Art shop at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Boutique d'art chez Animat Habitat.</font></p>
 
         <pre class="thin"></pre>
 
@@ -127,8 +127,8 @@
 
         <pre class="thin"></pre>
 
-        <p class="linebreak"><a href="patron/" title="Animat Habitat patrons.">Donation</a> <font class="fr">&#92;&nbsp;Don</font></p>
-        <p class="lineend small">Support independent art at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Soutenir art ind&eacute;pendant chez Animat Habitat.</font></p>
+        <p class="linebreak"><a href="patron/" title="Animat Habitat patrons.">Donation</a><font class="fr">&nbsp;&#92;&nbsp;Don</font></p>
+        <p class="lineend small">Patrons of the scenes in wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Patrons des sc&egrave;nes d'art de la nature.</font></p>
 
         <pre class="thin"></pre>
 
@@ -156,15 +156,13 @@
 
         <pre class="thin"></pre>
 
-        <p class="linebreak small">Animat Habitat official website designed and developed by <a href="url/git/danealeksander/" title="Dane Aleksander, graphic artist.">Dane Aleksander</a> with the open-source WordPress and Automattic WooCommerce information architecture, with Google Fonts: <i>Oswald</i> [Extra-Light, Medium], and then archived with GitHub pages.<font class="fr">&nbsp;&#92;&nbsp;Animat Habitat site officiel con&ccedil;u et d&eacute;velopp&eacute; par Dane Aleksander avec l'architecture d'information WordPress et WooCommerce, avec Google Fonts, et puis archiv&eacute; avec les pages GitHub.</font></p>
-
-        <!-- The protected areas of this website not served on GitHub are hosted in Canada powered by one-hundred percent renewable energy. <a href="//whc.ca/green-hosting/" title="WHC / Green Web Hosting in Canada" target="_blank" rel="noopener">Green web hosting in Canada</a>. -->
+        <p class="linebreak small">Animat Habitat official website designed and developed by <a href="url/git/danealeksander/" title="Dane Aleksander, graphic artist.">Dane Aleksander</a> with the open-source WordPress and Automattic WooCommerce information architecture, with Google Fonts: <i>Oswald</i> [Extra-Light, Medium], and then archived with GitHub pages. Protected areas of this website not served on GitHub are hosted in Canada and powered by renewable energy.<font class="fr">&nbsp;&#92;&nbsp;Animat Habitat site officiel con&ccedil;u et d&eacute;velopp&eacute; par Dane Aleksander avec l'architecture d'information WordPress et WooCommerce, avec Google Fonts, et puis archiv&eacute; avec les pages GitHub. Les zones prot&eacute;g&eacute;es de ce site Web non desservies sur GitHub sont h&eacute;berg&eacute;es au Canada et aliment&eacute;es par des &eacute;nergies renouvelables.</font></p>
 
         <p class="linebreak small">Animat Habitat <a href="index/" title="Animat Habitat official website index.">Site Index</a>.<font class="fr">&nbsp;&#92;&nbsp;Index du site Web.</font></p>
 
         <p class="linebreak small">Incorporated in Canada as not-for-profit organization #942675-2. &ldquo;Animat Habitat&rdquo; is an unregistered trademark that is protected for the purpose of corporate identity. Documents of the organization are archived and classified in the Animat Habitat <a href="s/" title="Animat Habitat member handbook.">Member Handbook</a>.<font class="fr">&nbsp;&#92;&nbsp;Incorpor&eacute;e au Canada comme organisation &agrave; but non lucratif &mdash; le nom de l'organisation est une marque non enregistr&eacute;e qui est prot&eacute;g&eacute;e aux fins de l'identit&eacute; corporatif. Les documents d'organisation sont archiv&eacute;s et class&eacute;s dans le manuel des membres.</font></p>
 
-        <!-- <p class="linebreak small">Thank you for visiting.<font class="fr">&nbsp;&#92;&nbsp;Merci pour votre visite.</font></p> -->
+        <p class="linebreak small">Thank you for visiting.<font class="fr">&nbsp;&#92;&nbsp;Merci pour votre visite.</font></p>
 
         <p class="linebreak small">Copyright &copy; 2015-2024 Animat Habitat. <a href="c/" target="_blank" title="Animat Habitat terms of access.">Terms of Access</a>.<font class="fr">&nbsp;&#92;&nbsp;Conditions d'acc&egrave;s.</font></p>
 
