--- a/scene/zero/index.html
+++ b/scene/zero/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
   <meta name="description" content="White Rhino&mdash;oil painting of a red horizon.&nbsp;&#92;&nbsp;Rhinoc&eacute;ros blanc &mdash; peinture &agrave; l’huile d’un horizon en flammes." />
-  <meta name="keywords" content="white rhino, white rhinoceros art, rhino painting, dane aleksander, ngorongoro" />
+  <meta name="keywords" content="white rhino, rhino painting, rhino art, rhino conservation art, ngoro" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Animat Habitat scene zero.</title>
