--- a/canon/index.html
+++ b/canon/index.html
@@ -8,11 +8,8 @@
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
   <meta name="description" content="" />
-  <meta name="keywords" content="animat canon, habitat canon, wildlife art canada, wildlife art studio, habitat logo" />
+  <meta name="keywords" content="animat, animat habitat, wildlife art canada, wildlife art studio, habitat canada" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <!-- To give life to the wild animals of the natural world. -->
-  <!-- Pour donner vie aux animaux sauvages du monde naturel. -->
 
   <title>Animat Habitat canon.</title>
 
