--- a/conservation/index.html
+++ b/conservation/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
   <meta name="description" content="Platform for the conservation of endangered species and their natural habitats.&nbsp;&#92;&nbsp;Plateforme de conservation des esp&egrave;ces en p&eacute;ril et de leurs habitats naturels." />
-  <meta name="keywords" content="wildlife conservation, nature conservation, habitat conservation, biological diversity, endangered species" />
+  <meta name="keywords" content="wildlife conservation, habitat conservation, habitat africa, habitat america, habitat canada" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Animat Habitat conservation platform.</title>
