--- a/patron/index.html
+++ b/patron/index.html
@@ -8,10 +8,10 @@
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
   <meta name="description" content="Animat Habitat is a non-profit organization founded in Canada.&nbsp;&#92;&nbsp;Animat Habitat est une organisation &agrave; but non-lucratif fond&eacute;e au Canada." />
-  <meta name="keywords" content="" />
+  <meta name="keywords" content="wildlife art canada, wildlife art patron, wildlife art studio, wildlife art org, wildlife conservation art" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat patron.</title>
+  <title>Animat Habitat patrons.</title>
 
   <style>
     html { background-color: #333; }
@@ -30,7 +30,7 @@
   <nav>
     <ul class="page">
       <li class="crumb logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb active"><a><i>Patron</i></a></li>
+      <li class="crumb active"><a><i>Patrons</i></a></li>
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
       <!-- <li class="right thin"><a class="title" onclick="toggle_currency();">
         <font class="paypal-ca"><b class="overscore">CA</b>&nbsp;&#92;&nbsp;US</font>
