--- a/c/terms-of-purchase/index.html
+++ b/c/terms-of-purchase/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; style-src fonts.googleapis.com 'self';" />
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; style-src fonts.googleapis.com 'self' 'unsafe-inline';" />
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="company" content="Animat Habitat" />
