--- a/canon/index.html
+++ b/canon/index.html
@@ -7,7 +7,7 @@
 
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="" />
+  <meta name="description" content="Animat Habitat canon." />
   <meta name="keywords" content="animat, animat habitat, wildlife art canada, wildlife art studio, habitat canada" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -101,9 +101,6 @@
       <div>
         <h3 class="linebreak">Our Studio<font class="fr">&nbsp;&#92;&nbsp;Notre studio</font></h3>
         <p><i>When one person is inspired to take action to protect wildlife, the world becomes a little better and if a threshold of people are thrilled to do the same, the world is changed.</i><font class="fr">&nbsp;&#92;&nbsp;<i>Lorsqu'une personne est inspir&eacute;e &agrave; prendre des mesures pour prot&eacute;ger la nature, le monde devient un peu mieux et lorsqu'un seuil de personnes sont enchant&eacute;s &agrave; faire de m&ecirc;me, le monde recommence &agrave; changer.</i></font></p>
-
-        <!-- We the people enact our story together. <i>Action!</i> -->
-        <!-- Nous, le peuple, cr&eacute;ons notre histoire ensemble. <i>Action&nbsp;!</i> -->
 
         <p class="linebreak">This story of saving the wild places and the animals that live in them is a human history, now, we must all write our part in. This is the story that Animat Habitat is established to tell. <i>Scene one</i> invites people to change the way we look at wildlife, starting with an African savanna elephant.<font class="fr">&nbsp;&#92;&nbsp;Cette histoire de sauvegarde des espaces sauvages et les animaux qui y vivent est une histoire &agrave; laquelle nous devons tous vouloir faire partie. C’est l’histoire qu'Animat Habitat a pour mission de raconter. <i>Sc&egrave;ne un</i> invite tout le monde &agrave; changer la fa&ccedil;on dont nous regardons la nature, &agrave; commencer par un &eacute;l&eacute;phant de savane africaine.</font></p>
 
